--- a/docs/.vuepress/public/css/index.css
+++ b/docs/.vuepress/public/css/index.css
@@ -28,7 +28,7 @@
     background-color: #fff;
     padding: 12px 20px 36px;
     border-radius: 8px;
-    text-align: center;
+    /* text-align: center; */
 }
 
 .item .details .site {
@@ -118,4 +118,9 @@ button, fieldset, img {
 .el-image__error, .el-image__inner, .el-image__placeholder {
     width: 100%;
     height: 100%;
+}
+
+.page .theme-default-content:not(.custom) {
+    /* max-width: initial;
+    width: auto; */
 }
